Left nav spacing fix

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -152,7 +152,7 @@ ul.text-style-2 li {
     }
   }
   ul.menu { 
-    padding: 0 0 0.25em 1em;
+    padding: 0 0 30px 1em;
     li, li.first, li.last {
       font-size: 14px;
       font-weight: bold;
@@ -163,9 +163,6 @@ ul.text-style-2 li {
     }
     li.first {
       padding-top: 23px;
-    }
-    li.last {
-      padding-bottom: 30px;
     }
     ul.menu {
       padding: 0px;
